[package]
name = "rumenx-sudoku"
version = "1.0.0"
edition = "2024"
authors = ["Rumen Damyanov <contact@rumenx.com>"]
description = "Fast Sudoku generator & solver — classic 9×9 plus configurable grids — with unique puzzles, CLI, and REST server."
license = "MIT"
repository = "https://github.com/rumendamyanov/rust-sudoku"
homepage = "https://github.com/rumendamyanov/rust-sudoku"
documentation = "https://docs.rs/rumenx-sudoku"
readme = "README.md"
keywords = ["sudoku", "solver", "generator", "puzzle", "game"]
categories = ["games", "algorithms"]
include = [
    "src/**/*",
    "examples/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.md",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "FUNDING.md",
    "Makefile",
    "Dockerfile",
]

[dependencies]
rand = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["set-header"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = []
cli = ["clap"]
server = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber"]

[[bin]]
name = "sudoku-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "sudoku-server"
path = "src/bin/server.rs"
required-features = ["server"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["set-header"] }
http-body-util = "0.1"
hyper = "1"
